--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -984,6 +984,12 @@ jobs:
             ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files"
             ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=~/magma-experimental/files"
             ansible-playbook devops-init.yaml  -e "dirLocalInventory=~/magma-experimental/files" -e "devOpsAmi=CloudStrapper${CIRCLE_BUILD_NUM}"
+      - run:
+          command: |
+            cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
+            ansible-playbook build-provision.yaml --tags devopsAgw,inventory -e "dirLocalInventory=~/magma-experimental/files" -e "dirInventory=~/magma-experimental/files" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
+            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
+            ansible-playbook ami-init.yaml "dirLocalInventory=~/magma-experimental/files" -e "devOpsAmi=agw${CIRCLE_BUILD_NUM}" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
       - magma_slack_notify
 
   ## CWF OPERATOR
