--- a/experimental/cloudstrapper/playbooks/roles/vars/secrets.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/secrets.yaml
@@ -5,8 +5,8 @@
 #TODO: Store in Vault
 
 #AWS Pre-requisites
-awsAccessKey: "AWS_ACCESS_KEY_ID"
-awsSecretKey: "AWS_SECRET_ACCESS_KEY"
+awsAccessKey: 
+awsSecretKey: 
 
 #Github Pre-requisites - Can be moved to AWS Code Pipeline
 gitUser: 
