--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -973,10 +973,8 @@ jobs:
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
             cp -r * ~/magma-experimental
             cp ~/magma-experimental/roles/vars/secrets.yaml ~/magma-experimental/files
-            sed -i -e "s@awsAccessKey:@& ${AWS_FB_CRED}@1"  $VARS_DIR/secrets.yaml
-            sed -i -e "s@awsSecretKey:@& ${AWS_FB_SECRET}@1"  $VARS_DIR/secrets.yaml
-            #sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
-            #sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
+            sed -i -e "s@awsAccessKey:@& ${AWS_FB_CRED}@1"  ~/magma-experimental/files/secrets.yaml
+            sed -i -e "s@awsSecretKey:@& ${AWS_FB_SECRET}@1"  ~/magma-experimental/files/secrets.yaml
             sed -i -e "s@imgCloudstrapperBase@CloudStrapper${CIRCLE_BUILD_NUM}@g" ~/magma-experimental/roles/vars/defaults.yaml 
             cp ~/magma-experimental/ansible.cfg ~/.ansible.cfg
             aws s3 cp s3://cloudstrapper-ec2-pems/mpboot101.pem ~/magma-experimental/files/
