--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1285,7 +1285,7 @@ jobs:
 workflows:
   version: 2.1
 
-   cloud:
+  cloud:
      jobs:
        - insync-checkin
        - cloud_lint
@@ -1296,7 +1296,7 @@ workflows:
              - cloud_lint
              - cloud-test
   
-   lib_gateway:
+  lib_gateway:
      jobs:
        - orc8r-gateway-test
 
@@ -1319,39 +1319,39 @@ workflows:
              - lte-integ-test
       - lte-agw-aws
       - c-cpp-codecov
-#
+
   release:
     jobs:
       - release-hold:
-          <<: *only_release
-          type: approval
-      - lte-agw-deploy:
-          <<: *only_release
-          requires:
-            - release-hold
+            <<: *only_release
+              type:approval
+              - lte-agw-deploy
+            <<: *only_release
+            requires:
+              - release-hold
       - cwag-deploy:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold
       - cwf-operator-build:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold
       - feg-build:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold
       - orc8r-build:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold
       - nms-build:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold          
       - lte-agw-aws:
-          <<: *only_release
-          requires:
+            <<: *only_release
+            requires:
             - release-hold
 
 
