Set the first 8 characters of commit hash as release version for sentry
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Get short SHA
+        id: slug
+        run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
@@ -20,3 +23,4 @@ jobs:
         with:
           environment: staging
           projects: lab-agws-python lab-agws-native
+          version: ${{ steps.slug.outputs.sha8 }}
