--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1283,7 +1283,7 @@ jobs:
       - magma_slack_notify
 
 workflows:
-  version: 2.1
+  version: 2
 
   cloud:
      jobs:
@@ -1323,35 +1323,31 @@ workflows:
   release:
     jobs:
       - release-hold:
-            <<: *only_release
-              type:approval
-              - lte-agw-deploy
-            <<: *only_release
-            requires:
-              - release-hold
+          <<: only_release
+          type: approval
+      - lte-agw-deploy:
+          <<: only_release
+          requires:
+            - release-hold
       - cwag-deploy:
-            <<: *only_release
-            requires:
+          <<: only_release
+          requires:
             - release-hold
       - cwf-operator-build:
-            <<: *only_release
-            requires:
+          <<: only_release
+          requires:
             - release-hold
       - feg-build:
-            <<: *only_release
-            requires:
+          <<: only_release
+          requires:
             - release-hold
       - orc8r-build:
-            <<: *only_release
-            requires:
+          <<: only_release
+          requires:
             - release-hold
       - nms-build:
-            <<: *only_release
-            requires:
-            - release-hold          
-      - lte-agw-aws:
-            <<: *only_release
-            requires:
+          <<: only_release
+          requires:
             - release-hold
 
 
