--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1070,10 +1070,10 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
-      - python/set_version:3.8.5
       - run:
           name: Setup Creds and session
           command: |
+            python --version
             pip3 install wheel
             pip3 install ansible
             pip3 install awscli
