--- a/experimental/cloudstrapper/playbooks/ami-configure.yaml
+++ b/experimental/cloudstrapper/playbooks/ami-configure.yaml
@@ -1,10 +1,10 @@
 ---
 - hosts: "{{ aminode }}"
   roles:
-    - magma-agw-1.5
+    - magma-agw-1.4
   vars:
-    ansible_ssh_private_key_file: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
+    ansible_ssh_private_key_file: "{{ dirInventory }}/{{ keyHost }}.pem"
   vars_files:
     - roles/vars/defaults.yaml
-    - "{{ dirLocalInventory }}/secrets.yaml"
+    - "{{ dirInventory }}/secrets.yaml"
     - roles/vars/cluster.yaml
