--- a/experimental/cloudstrapper/playbooks/orc8r.yaml
+++ b/experimental/cloudstrapper/playbooks/orc8r.yaml
@@ -2,11 +2,12 @@
 
 - hosts: localhost
   roles:
-    - { role: control, tags: controller }
+    - { role: magma-base, tags: base }
+    - { role: control, tags: controller } 
   vars_files:
     - roles/vars/cluster.yaml
     - roles/vars/defaults.yaml
-    - "{{ dirLocalInventory }}/secrets.yaml"
+    - "{{ dirInventory }}/secrets.yaml"
   environment:
     AWS_ACCESS_KEY_ID: "{{ awsAccessKey }}"
     AWS_SECRET_ACCESS_KEY: "{{ awsSecretKey }}"
