--- a/experimental/cloudstrapper/playbooks/roles/agw-infra/tasks/provision-instances.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/agw-infra/tasks/provision-instances.yaml
@@ -1,28 +1,14 @@
 ---
-- name: check if gateway name is defined
-  assert:
-    that:
-      - idGw is defined
 
 - name: identify sgi subnet id using tag
-  ec2_vpc_subnet_info:
+  ec2_vpc_subnet_info:  
     filters:
       "tag:Name": "{{ siteName }}-SgiSubnet"
   register: valSgiSubnet
 
-- name: identify s1 subnet id using tag
-  ec2_vpc_subnet_info:
-    filters:
-      "tag:Name": "{{ siteName }}-EnodebSubnet"
-  register: valEnodebSubnet
-
 - name: set sgi subnet fact
   set_fact:
     factSgiSubnetId: "{{ valSgiSubnet.subnets[0].subnet_id }}"
-
-- name: set sgi subnet fact
-  set_fact:
-    factEnodebSubnetId: "{{ valEnodebSubnet.subnets[0].subnet_id }}"
 
 - name: identify security group using tag, of the form sitename-secgroup
   ec2_group_info:
@@ -35,18 +21,15 @@
     factSecGroup: "{{ valSecGroup.security_groups[0].group_id }}"
 
 
-- name: provision agw base with dual nics
+- name: provision agw base
   cloudformation:
-    stack_name: "stack{{ siteName }}{{ idGw }}"
+    stack_name: "stack{{ siteName }}{{ idAgw }}"
     state: present
-    template: "roles/cfn/cfnMagmaAgwPublicDual.json"
+    template: "roles/cfn/cfnMagmaAgwPublic.json"
     template_parameters:
-      paramImageBase: "{{ awsAgwAmi }}"
+      paramImageBase: "{{ imageDebianAgw }}"
       paramSubnetSgi: "{{ factSgiSubnetId }}"
-      paramSubnetEnodeb: "{{ factEnodebSubnetId }}"
       paramAzHome: "{{ awsAgwAz }}"
       paramSecGroup: "{{ factSecGroup }}"
-      paramSshKey: "{{ awsHostKey }}"
-      paramAgwTagName: "{{ idGw }}"
-      paramAgwTagSite: "{{ siteName }}"
-      paramAgwInstanceType: "t2.medium"
+      paramSshKey: "{{ sshKeyAgw }}"
+      paramAgwTagName: "{{ siteName }}{{ idAgw }}"
