--- a/experimental/cloudstrapper/playbooks/roles/agw-platform/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/agw-platform/tasks/main.yaml
@@ -13,7 +13,7 @@
 - name: copy keys to certificate directory
   copy:
     src: "{{ dirSecretsLocal }}/rootCA.pem"
-    dest: "{{ agwCertsPath }}/rootCA.pem"
+    dest: "{{ agwCertsPath }}/rootCA.pem"  
   become: true
 
 - name: copy control_proxy
@@ -22,10 +22,20 @@
     dest: "{{ agwConfigPath }}/control_proxy.yml"
   become: true
 
-- name: restart magma services
-  systemd:
+- name: check service status
+  systemd: 
     state: restarted
     name: "{{ item }}"
   become: true
   with_items:
     - "{{ servicesMagma }}"
+  ignore_errors: yes
+
+- name: check services again
+  systemd: 
+    state: started
+    name: "{{ item }}"
+  become: true
+  with_items:
+    - "{{ servicesMagmaAll }}"
+  ignore_errors: yes
