--- a/experimental/cloudstrapper/playbooks/roles/aws-cleanup/vars/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/aws-cleanup/vars/main.yaml
@@ -24,11 +24,14 @@ fullStacks:
   - stackSanRamonAgwA
   - stackSanRamonNetwork
 orc8rDbs:
-    - orc8rdb
+  - nmsdb
+  - orc8rdb
 orc8rDbSnapshots:
-    - orc8rdb-final-snapshot
+  - nmsdb-final-snapshot
+  - orc8rdb-final-snapshot
 orc8rDbParameterGroups:
-    - default.postgres9.6
+  - default.mysql5.7
+  - default.postgres9.6
 
 orc8rSecrets: "{{ orc8rTfSecrets }}"
 orc8rElasticsearch: "{{ orc8rTfEs }}"
