--- a/experimental/cloudstrapper/playbooks/roles/aws-inventory/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/aws-inventory/tasks/main.yaml
@@ -2,12 +2,12 @@
 
 - name: folder for dynamic inventory file
   file:
-    path: "{{ dirLocalInventory }}"
+    path: "{{ dirInventory }}"
     mode: '0755'
-    state: directory
+    state: directory 
 
 - name: templatizing dynamic inventory file
   template:
     src: roles/aws-inventory/templates/instance_aws_ec2.yaml.j2
-    dest: "{{ dirLocalInventory }}/common_instance_aws_ec2.yaml"
-    mode: '0644'
+    dest: "{{ dirInventory }}/common_instance_aws_ec2.yaml"
+    mode: '0644' 
