--- a/experimental/cloudstrapper/playbooks/roles/build-infra/tasks/agw-devops.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/build-infra/tasks/agw-devops.yaml
@@ -3,26 +3,27 @@
 - name: query all security groups
   ec2_group_info:
     filters:
-      group-name: "{{ secgroupDefault }}"
+      group-name: "{{ secgroupDefault }}" 
   register: regSecGroup
-  tags: infra-agw
+  tags: infra
 
 - name: assign security group id to variable
   set_fact:
-    factSecGroup: "{{ regSecGroup.security_groups[0].group_id }}"
-  tags: infra-agw
+    factSecGroup: "{{ regSecGroup.security_groups[0].group_id }}" 
+  tags: infra
 
 - name: launch AGW AMI devops node
   cloudformation:
-    stack_name: "stackBuildUbuntuAgw"
+    stack_name: "stackBuildAgw"
     state: "present"
-    template: "roles/cfn/cfnMagmaAgwAmiPublicDual.json"
+    template: "roles/cfn/cfnMagmaAgwAmiBuild.json"
     template_parameters:
-      paramImageBase: "{{ buildUbuntuAmi }}"
+      paramImageId: "{{ buildDebianAmi }}"
       paramSecGroup: "{{ factSecGroup }}"
       paramAvlZone: "{{ buildAwsAz }}"
       paramKeyHost: "{{ keyHost }}"
-      paramInstanceType: "{{ buildGwInstanceType }}"
+      paramInstanceType: "{{ buildGwInstanceType }}" 
       paramTagName: "{{ buildGwTagName }}"
-  tags:
+  tags: 
      - infra-agw
+    
