--- a/experimental/cloudstrapper/playbooks/roles/control/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/control/tasks/main.yaml
@@ -4,5 +4,8 @@
 - include: configure-terraform.yaml
   tags: config-tf
   ignore_errors: true
+- include: patch-terraform-v1.3.yaml
+  tags:  patch-tf 
+  when: orc8rVersion == "v1.3"
 - include: deploy-orc8r.yaml
   tags: deploy-orc8r
