--- a/experimental/cloudstrapper/playbooks/roles/control/vars/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/control/vars/main.yaml
@@ -1,6 +1,6 @@
 ---
 
-dirTerraform: "{{ dirLocalInventory }}/{{ orc8rClusterName }}/terraform"
+dirTerraform: "{{ dirExpHome }}/{{ orc8rClusterName }}/terraform"
 localTerraformDir: "{{ dirTerraform }}/.terraform/modules/orc8r/orc8r/cloud/deploy/terraform/"
 localTerraformAppDir: "{{ dirTerraform }}/.terraform/modules/orc8r-app/orc8r/cloud/deploy/terraform/"
 
@@ -14,3 +14,4 @@ nmsDbPassword: testpassword
 orc8rDbPassword: testpassword
 helmRepo: "{{ gitHelmRepo }}"
 orc8rTag: "{{ orc8rLabel }}"
+orc8rChartVersion: 1.4.36
