--- a/experimental/cloudstrapper/playbooks/roles/vars/defaults.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/defaults.yaml
@@ -6,9 +6,9 @@
 #------------------
 
 secgroupDefault: secgroupMagmaProto
-bucketDefault: lte-agw-aws
-keyBoot: mpboot101
-keyHost: mphost101
+bucketDefault: bucket-mantle-canada
+keyBoot: keyMagmaBoot
+keyHost: keyMagmaHost
 
 devOpsCloudstrapper: ec2MagmaDevopsCloudstrapper
 primaryCloudstrapper: ec2MagmaCloudstrapper
