--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -955,9 +955,12 @@ jobs:
 
   lte-agw-aws:
     environment:
-      MAGMA_ROOT: /home/circleci/project  
+      MAGMA_ROOT: /home/circleci/project
+      VARS: $HOME/experimental/cloudstrapper/playbooks/roles/vars
+      WORK: $HOME/experimental/cloudstrapper/playbooks
     machine:
-      image: ubuntu-1604:201903-01
+       image: ubuntu-2004:202010-01
+
     steps:
       - checkout
       - python/set_version
@@ -971,33 +974,32 @@ jobs:
             mkdir ~/magma-experimental
             mkdir ~/magma-experimental/files
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
-            cp -r * ~/magma-experimental
+            cp -r * $WORK
             cp ~/magma-experimental/roles/vars/secrets.yaml ~/magma-experimental/files
-            sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
-            sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
-            sed -i -e "s@imgCloudstrapperBase@CloudStrapper${CIRCLE_BUILD_NUM}@g" ~/magma-experimental/roles/vars/defaults.yaml 
-            aws s3 cp s3://cloudstrapper-ec2-pems/mpboot101.pem ~/magma-experimental/files/
-            aws s3 cp s3://cloudstrapper-ec2-pems/mphost101.pem ~/magma-experimental/files/
-            chmod 600 ~/magma-experimental/files/*.pem
+            sed -i -e "s@awsAccessKey:@& ${AWS_FB_CRED}@1"  $WORK/files/secrets.yaml
+            sed -i -e "s@awsSecretKey:@& ${AWS_FB_SECRET}@1"  $WORK/files/secrets.yaml
+            sed -i -e "s@imgCloudstrapperBase@CloudStrapper${CIRCLE_BUILD_NUM}@g" $VARS/defaults.yaml 
+            aws s3 cp s3://cloudstrapper-ec2-pems/mpboot101.pem $WORK/files/
+            aws s3 cp s3://cloudstrapper-ec2-pems/mphost101.pem $WORK/files/
+            chmod 600 $WORK/files/*.pem
       - run:
         name: aws-prerequisites
           command: |
-            cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
-            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
-      - run:
+            cd ${WORK}
+            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=$WORK/files" -e "dirLocalInventory=$WORK/files"
         name: CloudStrapper
           command: |
-            cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
-            ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
-            ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
-            ansible-playbook devops-init.yaml  -e "dirLocalInventory=~/magma-experimental/files" -e "devOpsAmi=CloudStrapper${CIRCLE_BUILD_NUM}" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
+            cd ${WORK}
+            ansible-playbook devops-provision.yaml -e "dirLocalInventory=$WORK/files" -e "dirLocalInventory=$WORK/files"
+            ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=$WORK/files" -u ubuntu --CRskip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=$WORK/files"
+            ansible-playbook devops-init.yaml  -e "dirLocalInventory=$WORK/files" -e "devOpsAmi=CloudStrapper${CIRCLE_BUILD_NUM}"
       - run:
         name: AGW
           command: |
-            cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
-            ansible-playbook build-provision.yaml --tags devopsAgw,inventory -e "dirLocalInventory=~/magma-experimental/files" -e "dirInventory=~/magma-experimental/files" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
-            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
-            ansible-playbook ami-init.yaml "dirLocalInventory=~/magma-experimental/files" -e "devOpsAmi=agw${CIRCLE_BUILD_NUM}" -e "awsAccessKey=$AWS_FB_CRED"  -e "awsSecretKey=$AWS_FB_SECRET"
+            cd ${WORK}
+            ansible-playbook build-provision.yaml --tags devopsAgw,inventory -e "dirLocalInventory=$WORK/files" -e "dirInventory=$WORK/files"
+            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
+            ansible-playbook ami-init.yaml "dirLocalInventory=$WORK/files" -e "devOpsAmi=agw${CIRCLE_BUILD_NUM}"
 
       - magma_slack_notify
 
